@@ -1,92 +1,80 @@
 package com.ironhack.homework_1;
-
-import java.util.*;
-import  java.lang.reflect.*;
+import java.lang.reflect.InvocationTargetException;
+import java.util.Scanner;
 
 public abstract class Character {
-    /*
-    id - unique identifier
-    name - String
-    hp - number representing the health points
-    isAlive - flag to determine if the Player is alive
-    */
-
     private int id;
     private String name;
     private double hp;
     private boolean isAlive;
 
-    public static boolean hardcore = false;
+    //idCount is incremented to allocate a new ID when a character is instantiated.
     private static int idCount = 0;
+    //Keep track of character classes by name for user selection and by class reference so their constructors can be accessed at runtime.
     private static String[] classNames = {"Warrior", "Wizard", "Archer"};
     private static Class[] possibleClasses = {Warrior.class, Wizard.class, Archer.class};
 
+    //Default constructor for use when creating randomised characters
     public Character(){
         this.isAlive = true;
         setName();
         setId();
     }
 
+    //Constructor that allows user input of character name
     public Character(String name){
         this.isAlive = true;
         setName(name);
         setId();
     }
 
+
+    //Getters and setters for Character.java private properties
     public int getId() {
         return id;
     }
-
     public void setId() {
         this.id = ++idCount;
     }
-
     public String getName() {
         return name;
     }
-
+    //Overloaded setName function to enable direct passing of name as well as randomisation.
     public void setName(){
         this.name = Names.randomName();
     }
-
     public void setName(String name) {
         this.name = name;
     }
-
     public double getHp() {
         return hp;
     }
-
-    public void setHp(){
-        this.hp = 100;
-    }
-
     public void setHp(double hp) {
         this.hp = hp;
     }
-
     public boolean isAlive() {
         return isAlive;
     }
-
     public void setAlive(boolean alive) {
         isAlive = alive;
     }
 
 
-
+    //Abstract functions implemented by all subclasses
     abstract String attack(Character character);
     abstract String manualAttack(Character character);
     abstract void receiveDamage(double damage);
     abstract String printStats();
+    abstract String printSimpleStats();
+    abstract String toCsvFormat();
 
+    //Prints out the basics of a character object
     public String printSimpleIntroduction(){
         return this.getName() + " the " + this.getClass().getSimpleName();
     }
-    abstract String printSimpleStats();
 
-    abstract String toCsvFormat();
-
+    //Character object parsing for use when importing from CSV file. Checks each character is correctly formatted
+    //with the appropriate amount of parameters a character should have.
     public static Character addCharacter(String[] parameters){
         switch(parameters[0]){
             case "Warrior":
@@ -134,12 +122,15 @@ public abstract class Character {
                 return null;
         }
     }
-    public static Character getRandom() throws NoSuchMethodException, ClassNotFoundException, InstantiationException, IllegalAccessException {
+
+    //Function that uses .class references to invoke a constructor of possible class types at random
+    public static Character getRandom() throws NoSuchMethodException, InvocationTargetException, InstantiationException, IllegalAccessException {
         int rndClassIndex = (int) Math.floor(Math.random() * possibleClasses.length);
-        Character charRnd = (Character) possibleClasses[rndClassIndex].newInstance();
+        Character charRnd = (Character) possibleClasses[rndClassIndex].getDeclaredConstructor().newInstance();
         return charRnd;
     }
 
+    //Intermediary method to pass control to subclass implementations of character creation function based on user input.
     public static Character createCustom(){
         Scanner scanner = new Scanner(System.in);
         Printer.printFormatted("Choose a class for your new Character: ");
